--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,8 +1,15 @@
 .loader {
   position: fixed;
+  inset: 0;
+  z-index: 2000;
+  background-color: rgba(244, 244, 244, 0.75);
+}
+
+.loader::after {
+  content: '';
+  position: absolute;
   top: 50%;
   left: 50%;
-  z-index: 2000;
   width: 48px;
   height: 48px;
   border: 5px solid var(--color-border);
